1.3.3		02 Apr 2013

	* Update README for the new decade.
	* Upgrade to autconf 2.69 and automake 1.11.6 for Fedora.
	* Grab latest config.sub and config.guess from Debian autotools-dev.
	* Update --help output to note that $COLUMNS must be exported.

1.3.2		26 Feb 2007

	* Fix problem with ^ character (patch from Andrew Dranse).
	* Update author contact information to reference cedar-solutions.com.

1.3.1		23 May 2004

	* Allow more than one word to be printed (closes: #11).
	* Now restrict print width based on terminal rather than fixed value.
	* Project is no longer "foreign" from perspective of auto-tools.

1.3.0		17 Apr 2004

	* Fully Doxygenated all source files.
	* Complete code reorganization; removed banner.h.
	* Converted all 'long' variables to 'int' instead.
	* Now use tabs in Changelog to match Vim's syntax file.
	* Added support for whitespace in output (closes: #10).

1.2.2    08 Sep 2003

	* Converted file headers to new Cedar Solutions standard.
	* Removed all references to Cedar Solutions, Inc.
	* Added config.guess as needed for newer versions of Automake.
	* Cleaned up some documentation; added details to README.
	* Updated the usage display in banner.c.
	* Added this Changelog file.

1.2.1    07 Sep 2001

	* Minor changes for initial public release.

1.2.0    11 Jun 2000

	* Initial release for private use.

-----------------------------------------------------------------------------
vim: set ft=changelog noexpandtab:
