@@ -563,9 +563,11 @@ static void usage(char *program)
 {
    printf("Usage: %s [string | --help]\n"
           "\n"
-          "Prints a \"banner\" version of a string to STDOUT.  If $COLUMNS is\n"
-          "exported in the environment, it is taken to be the width of the terminal.\n"
-          "Otherwise, a terminal width of %d characters is assumed, and banners\n"
+          "This is a classic-style banner program similar to the one found in Solaris or\n"
+          "AIX.  It prints a short string to the console in very large letters.\n"
+          "\n"
+          "If $COLUMNS is exported in the environment, it is taken to be the width of the\n"
+          "terminal. Otherwise, a terminal width of %d characters is assumed, and banners\n"
           "that do not fit will be truncated.\n"
           "\n"
           "This is %s %s.\n"
